Addition of fetch loading animations

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,7 +18,7 @@
 }
 
 .active{
-  height: 320px;
+  min-height: 320px;
   width: 100%;
   padding: var(--padding);
 }
@@ -30,5 +30,17 @@
 
 #submit:hover{
   cursor: pointer;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  } to {
+    transform: rotate(360deg)
+  }
+}
+
+.spinner {
+  animation: spin 2s linear 0ms infinite;
 }
 
