--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,7 +40,115 @@
   }
 }
 
+@keyframes spin2 {
+  from {
+    transform: rotate(20deg);
+  } to {
+    transform: rotate(380deg)
+  }
+}
+
+
+
+
 .spinner {
   animation: spin 2s linear 0ms infinite;
 }
 
+.spinner2 {
+  animation: spin2 10s linear 0ms infinite;
+}
+
+.spinner3 {
+  animation: spin 12s linear 0ms infinite;
+}
+
+.menu-active{
+  height: auto; width: max-content;
+  transition: height 0.25s linear;
+  position: absolute;
+  background-color: #242424;
+  padding: var(--padding) calc(2*var(--padding)) 0 calc(2*var(--padding));
+  display: flex; flex-direction: column;
+  border: 1px solid #f5f5f5;
+  left: 100%;
+  top: 0;
+}
+
+.menu-active a{
+  width: 100%;
+  color: #f5f5f5;
+  display: block;
+  border-bottom: 1px solid #3c3c3c;
+  margin-bottom: var(--padding);
+}
+
+.menu-hidden {
+  display: none;
+  height: 0;
+}
+
+#typewriter span{
+  font-family: inherit;
+}
+
+#start {
+  background-color: #000;
+  color: #f5f5f5;
+}
+
+#start:hover {
+  background-color: #f5f5f5;
+  color: #000;
+}
+
+.top-triangle{
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.top-trianglesvg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 150px;
+}
+
+.top-triangle.shape-fill {
+  fill: #000000;
+}
+
+.bottom-triangle {
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.bottom-triangle svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 150px;
+}
+
+.bottom-triangle .shape-fill {
+  fill: #000000;
+}
+
+#preloader {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #242424;
+  position: absolute;
+}
+
+#preloader svg{
+  fill: #f5f5f5;
+  height: 50%;
+  aspect-ratio: 1 / 1;
+}
