--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,8 +18,13 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
+a:hover{
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 body {
@@ -29,6 +34,10 @@ body {
   padding: var(--padding);
   min-width: 320px;
   min-height: 100vh;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 textarea, textarea:focus, textarea:focus-visible, textarea:hover, textarea:active, textarea:focus-within, textarea:visited, textarea:target{
